--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Encode-Bootstring
 
+0.02    2009-10-01/21:50
+        Bug fixes and tests.
+
 0.01    2009-09-26/21:55
         First version.
 
