Import of SAUBER/Encode-Bootstring-0.03 from CPAN.
gitpan-cpan-distribution: Encode-Bootstring
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SAUBER/Encode-Bootstring-0.03.tar.gz
gitpan-cpan-author:       SAUBER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Encode-Bootstring
 
+0.03    2009-10-03/17:15
+        Pod update. Patch from Lars Dɪᴇᴄᴋᴏᴡ.
+
 0.02    2009-10-01/21:50
         Bug fixes and tests.
 
